<resources>
    <string name="app_name">Kairosz</string>
    <string name="pref_previously_started">FirstStart</string>


    <!-- NavigationView -->
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="checkStatistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="own_cards">Own cards</string>
    <string name="plan_the_card_set">Plan the Card Set</string>
    <string name="title_activity_plan_the_card_set">PlanTheCardSet</string>
    <string name="statistics_activity_RedCircle_text_above">Red Cards: Day / Week / Target</string>
    <string name="statistics_activity_GreenCircle_text_above">Green Cards: Day / Week / Target</string>
    <string name="statistics_activity_BlueCircle_text_above">Blue Cards: Day / Week / Target</string>
    <string name="statistics_activity_blue_cards_count">0</string>
    <string name="statistics_activity_green_cards_count">0</string>
    <string name="statistics_activity_red_cards_count">0</string>
    <string name="title_activity_create_new_card">Create New Card</string>
    <string name="finalize_new_card_activity_first_details_above">Enter First Details:</string>
    <string name="finalize_new_card_activity_second_details_above">Enter Second Details:</string>
    <string name="title_activity_finalize_new_card">Finalize New Card</string>
    <string name="title_activity_created_cards">Created Cards</string>
    <string name="title_activity_settings">Settings</string>
    <string name="toggle_button_default_activity_settings">In Family</string>
    <string name="toggle_button_family_status_alone_activity_settings">Alone</string>
    <string name="toggle_button_family_status_in_family_activity_settings">In Family</string>
    <string name="toggle_button_text_view_caption_activity_settings">Alone/In Family</string>
    <string name="edit_text_age_text_view_caption_activity_settings">Age</string>
    <string name="TextView_introvert_or_extrovert_caption_activity_settings">Introvert/Extrovert</string>
    <string name="toggle_button_introvert_or_extrovert_default_activity_settings">Extrovert</string>
    <string name="toggle_button_introvert_or_extrovert_status_introvert_activity_settings">Introvert</string>
    <string name="toggle_button_introvert_or_extrovert_status_extrovert_activity_settings">Extrovert</string>
    <string name="TextView_owl_or_lark_caption_activity_settings">Owl/Lark</string>
    <string name="toggle_button_owl_or_lark_default_activity_settings">Owl</string>
    <string name="toggle_button_owl_or_lark_status_owl_activity_settings">Owl</string>
    <string name="toggle_button_owl_or_lark_status_lark_activity_settings">Lark</string>
    <string name="TextView_golden_sentences_caption_activity_settings">Golden Sentences</string>

    <string name="IntroActivity_title1">App\'s Goal</string>
    <string name="IntroActivity_description1">To help us capture Kronos in Kairos</string>
    <string name="IntroActivity_title2">App\'s Method</string>
    <string name="IntroActivity_description2">"waking up by reminding" - (2Pt 1, 13)</string>
    <string name="IntroActivity_title3">How it helps?</string>
    <string name="IntroActivity_description3">Make your own recepie</string>
    <string name="IntroActivity_title4">The Soul in work</string>
    <string name="IntroActivity_description4">The app helps us to capture the Soul in our life</string>


    <string name="LeadingIdeaActivity_label">Your life\'s leading Idea</string>
    <string name="LeadingIdeaActivity_default_entry">Leading Idea</string>
    <string name="LeadingIdeaActivity_button_update_label">Update</string>
    <string name="LeadingIdea_menuItem">Leading Idea</string>
    <string name="LeadingIdea_cardLabel">Leading Idea</string>

    <string name="AddGoldenSentenceActivity_label">Add new Golden Sentence</string>
    <string name="AddGoldenSentenceActivity_default_entry">Golden Sentence</string>
    <string name="AddGoldenSentenceActivity_button_update_label">Add</string>
    <string name="GoldenSentencesAreEmpty">There are no golden sentences - add it in Settings</string>
    <string name="GoldenSentencesDeleted_ToastMessage">Golden Sentence deleted!</string>
    <string name="SettingsActivity_targets_label">Weekly Targets:</string>
    <string name="SettingsActivity_targets_button_default_label">3</string>

    <string name="FinalizeNewCard_Toast_Message">Fill cards details!</string>

    <string name="NotificationGoldenSentenceTitle1">Daily Golden Sentence for You!</string>
    <string name="NotificationGoldenSentenceText1">Tap for details!</string>

    <string name="NotificationAgeRelatedMessageTitle1">Age related message</string>

    <string name="NotificationIntroExtroTitle1">Notification about progress</string>
    <string name="NotificationIntroExtroText1">Tap for details!</string>
    <string name="NotificationIntroText_more_private_time">Try to finish more private time activities!</string>
    <string name="NotificationExtroText_more_private_time">Try to finish more private time activities with your friends and family!</string>

    <string name="InfoActivity_credits_details">
        Kairosz application credits\n
        Application version number: 1.3 \n
        Project Code: https://github.com/vlazar83/MyGoals\n
        Copyright (c) 2020 Viktor Lázár\n
        License: MIT License\n\n

        Other libraries used in this application:\n
        Name: Android-Onboarder\n
        Project Code: https://github.com/Swisyn/Android-Onboarder\n
        Copyright (c) 2017 Cuneyt AYYILDIZ\n
        License: MIT License\n\n

        Name: CardStackView\n
        Project Code: https://github.com/yuyakaido/CardStackView\n
        Copyright (c) Copyright 2018 yuyakaido\n
        License: Apache License, Version 2.0 - http://www.apache.org/licenses/LICENSE-2.0\n\n

        Name: glide\n
        Project Code: https://github.com/bumptech/glide\n
        License: BSD, part MIT and Apache 2.0.\n\n

        Name: RoundedImageView\n
        Project Code: https://github.com/vinc3m1/RoundedImageView\n
        Copyright 2017 Vincent Mi\n
        License: Apache License, Version 2.0 - http://www.apache.org/licenses/LICENSE-2.0\n\n

        Name: CircleProgress\n
        Project Code: https://github.com/lzyzsd/CircleProgress\n
        Copyright --\n
        License: --\n\n

        Name: ThreeTenABP\n
        Project Code: https://github.com/JakeWharton/ThreeTenABP\n
        Copyright (c) 2015 Jake Wharton\n
        License: Apache License, Version 2.0 - http://www.apache.org/licenses/LICENSE-2.0\n\n

        -----------\n
        Graphics by Gally-Nagy Krisztina:\n
        https://designfreak.hu/
    </string>

    <string name="DefaultCard_red_goal">Work</string>
    <string name="DefaultCard_red1">worships on Sundays</string>
    <string name="DefaultCard_red2">teaching about God\'s love</string>
    <string name="DefaultCard_red3">preparations…</string>
    <string name="DefaultCard_red_geneic">other work related activities</string>

    <string name="DefaultCard_blue_goal">Family</string>
    <string name="DefaultCard_blue1">visit your family</string>
    <string name="DefaultCard_blue2">family trip in the woods</string>
    <string name="DefaultCard_blue_geneic">other activities with your loved ones</string>

    <string name="DefaultCard_green_goal">Self-Time</string>
    <string name="DefaultCard_green_card_introvert_1">reading a book</string>
    <string name="DefaultCard_green_card_extrovert_1">board game night with the family</string>
    <string name="DefaultCard_green_card_introvert_2">pray</string>
    <string name="DefaultCard_green_card_extrovert_2">football with friends</string>
    <string name="DefaultCard_green_geneic">other activities for yourself</string>

    <string name="StatisticsActivity_Toast_extrovert">Try to spend time with your family/friends!</string>
    <string name="StatisticsActivity_Toast_introvert">Try to allocate time for yourself!</string>

    <string name="MainActivity_Toast_inFamily1">Did you calculate in your planning with your family too?</string>
    <string name="MainActivity_Toast_inFamily2">What activities did you favour, if not your family?</string>

    <string name="Notification_owl_or_lark_title">Question</string>
    <string name="Notification_owl_or_lark_text">When are you the most active on a day?</string>

    <string name="AlertDialog_work_family_life_title">Work/Family/Self-Time related message</string>
    <string name="AlertDialog_goldenSentenceDeletion_title">Really delete?</string>
    <string name="AlertDialog_goldenSentenceDeletion_message">Really delete this golden sentence?</string>

    <string name="AlertDialog_goldenSentenceDeletion_action_delete">Delete</string>
    <string name="AlertDialog_goldenSentenceDeletion_action_cancel">Cancel</string>

</resources>
